session added for all login pages

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -63,14 +63,14 @@
 
 									<!-- Vendor Portal Button -->
 									<div>
-										<a href="/vendor" class="portal-button mx-auto" id="portal-button">
+										<a href="/vendor_login" class="portal-button mx-auto" id="portal-button">
 											Vendor Portal
 										</a>
 									</div>
 
 									<!-- Purchaser Portal Button -->
 									<div>
-										<a href="/purchaser" class="portal-button mx-auto" id="portal-button">
+										<a href="/purchaser_login" class="portal-button mx-auto" id="portal-button">
 											Purchaser Portal
 										</a>
 									</div>
