--- a/templates/purchaser_login.html
+++ b/templates/purchaser_login.html
@@ -52,7 +52,7 @@
 						<!--begin::Wrapper-->
 						<div class="w-lg-500px p-10 p-lg-15 mx-auto">
 							<!--begin::Form-->
-							<form class="form w-100" action = "/purchaser_dashboard" method = "post">
+							<form class="form w-100" action = "/purchaser_login" method = "post">
 								<!--begin::Heading-->
 								<div class="text-center mb-10">
 									<!--begin::Title-->
