--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
           </div>
           <div>
             <a class="navbar-brand brand-logo-lg" href="index.html">
-              <img id="logo"src="static\images\hinfo.jpg" alt="logo" />
+              <img id="logo"src="static\images\hinfo_logo.jpg" alt="logo" />
             </a>
             <a class="navbar-brand brand-logo-mini" href="index.html">
               <img src="static/images/logo-mini.svg" alt="logo" />
