--- a/templates/purchaser_login.html
+++ b/templates/purchaser_login.html
@@ -52,12 +52,23 @@
 						<!--begin::Wrapper-->
 						<div class="w-lg-500px p-10 p-lg-15 mx-auto">
 							<!--begin::Form-->
-							<form class="form w-100" action = "/purchaser_login" method = "post">
+							<form class="form w-100" action = "/purchaser_login" method = "POST">
 								<!--begin::Heading-->
 								<div class="text-center mb-10">
 									<!--begin::Title-->
 									<h1 class="text-dark mb-3">Purchaser login Portal</h1>
 									<!--end::Title-->
+								</div>
+								<div>
+									{% with messages = get_flashed_messages() %}
+										{% if messages %}
+											{% for message in messages %}
+												<div class="alert alert-warning text-center" role="alert">
+													{{ message }}
+												</div>
+											{% endfor %}
+										{% endif %}
+									{% endwith %}
 								</div>
 								<!--begin::Heading-->
 								<!--begin::Input group-->
